--- a/package.json
+++ b/package.json
@@ -2,5 +2,7 @@
   "name": "codersrank-template",
   "version": "0.0.0",
   "private": false,
-  "dependencies": {}
+  "dependencies": {
+    "mozilla": "^0.0.0"
+  }
 }
